# chessbot_ws

./: README.md
chessbot_calibration/: CMakeLists.txt  CMakeLists.txt.old  package.xml
chessbot_calibration/launch/: calibrate.launch  lookup_coordinate.launch  publish.launch
chessbot_calibration/src/: lookup_coordinate.cpp
chessbot_control/: CMakeLists.txt  package.xml
chessbot_control/launch/: start.launch  test_controller.launch
chessbot_control/megvii_demo/: chessbot_controller.py  config.yaml  demo.py  fake_player.py  utils.py
chessbot_control/megvii_demo2/: chessbot_controller.py  config (copy 1).yaml  config.yaml  fake_player.py
chessbot_control/scripts/: chessbot_controller.py  chessbot_controller_point.py  demo.py  test.py  test_move.py  tf_listener.py
chessbot_data_acquisition/: CMakeLists.txt  package.xml
chessbot_data_acquisition/launch/: collect_data.launch
chessbot_data_acquisition/src/: collect_test_set.cpp  collect_training_set.cpp
chessbot_description/: CMakeLists.txt  package.xml
chessbot_description/launch/: chessbot.launch  chessbot_upload.launch  controller_utils.launch
chessbot_description/urdf/: aruco.urdf.xacro  chessbot.urdf.xacro  chessbot_limited.urdf.xacro  kinect.urdf.xacro  rg2.urdf.xacro  support_base.urdf.xacro
chessbot_modern_driver/: CMakeLists.txt  package.xml
chessbot_modern_driver/launch/: chessbot_bringup.launch  chessbot_bringup_compatible.launch  chessbot_bringup_joint_limited.launch  chessbot_ros_control.launch  ur10_bringup.launch  (+7 more)
chessbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+30 files in other folders)
